Fixed client not working